refactor: downgrade Java version and update mixins
- Downgrade Java version to 1.8 in build.gradle and gradle.properties
- Update fabric.mod.json to remove fabric-api dependency
- Modify Minecraft version to 1.16.5 in gradle.properties- Update lead item and entity interactions- Refactor AreaLeash and ILeash interfaces
- Remove unused NbtUtils class