@@ -6,13 +6,13 @@ import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.Mob;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.level.Level;
-import net.minecraft.world.level.gameevent.GameEvent;
 import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.List;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 /**
  * @Project: MoreLeads
@@ -26,22 +26,23 @@ public interface AreaLeash {
     }
 
     static List<Mob> leashableInArea(Entity entity, Predicate<Mob> predicate) {
-        return leashableInArea(entity.level(), entity.getBoundingBox().getCenter(), predicate);
+        return leashableInArea(entity.level, entity.getBoundingBox().getCenter(), predicate);
     }
 
     static List<Mob> leashableInArea(Level level, Vec3 vec3, Predicate<Mob> predicate) {
         double d = 32.0;
-        AABB aABB = AABB.ofSize(vec3, 32.0, 32.0, 32.0);
-        return level.getEntitiesOfClass(Entity.class, aABB, entity -> entity instanceof Mob leashable && predicate.test(leashable))
+        AABB aABB = new AABB(vec3.x - d / 2.0, vec3.y - d / 2.0, vec3.z - d / 2.0, vec3.x + d / 2.0, vec3.y + d / 2.0, vec3.z + d / 2.0);
+        return level.getEntitiesOfClass(Entity.class, aABB, entity -> entity instanceof Mob && predicate.test((Mob) entity))
                 .stream()
                 .map(Mob.class::cast)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     static boolean shearOffAllLeashConnections(Mob mob, @Nullable Player player) {
         boolean bl = dropAllLeashConnections(mob, player);
-        if (bl && mob.level() instanceof ServerLevel serverLevel) {
-            serverLevel.playSound(null, mob.blockPosition(), SoundEvents.SHEEP_SHEAR, player != null ? player.getSoundSource() : mob.getSoundSource());
+        if (bl && mob.level instanceof ServerLevel) {
+            ServerLevel serverLevel = (ServerLevel) mob.level;
+            serverLevel.playSound(null, mob.blockPosition(), SoundEvents.SHEEP_SHEAR, player != null ? player.getSoundSource() : mob.getSoundSource(), 1, 1);
         }
 
         return bl;
@@ -59,11 +60,6 @@ public interface AreaLeash {
             leashable2.dropLeash(true, true);
         }
 
-        if (bl) {
-            mob.gameEvent(GameEvent.SHEAR, player);
-            return true;
-        } else {
-            return false;
-        }
+        return bl;
     }
 }
